syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "PlatformInfo.proto";

// CmdId: 208
// EnetChannelId: 0
// EnetIsReliable: true
message PlatformStartRouteNotify {
	uint32 entity_id = 7;
	PlatformInfo platform = 9;
	uint32 scene_time = 1;
}
